# laboop

./: .gitignore  CMakeLists.txt
src/: input.c  input.h  main.c  set.c  set.h  sort_and_unify.c  sort_and_unify.h  tests.c
